<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/one">

    <EditText
        android:id="@+id/calculation"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginTop="5dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginTop="5dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculation" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="@dimen/button_text"
        android:textColor="@color/white"
        android:backgroundTint="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@id/result" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_6"
        app:layout_constraintEnd_toStartOf="@id/button_division"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@id/result" />

    <Button
        android:id="@+id/button_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_division"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_3"
        app:layout_constraintTop_toBottomOf="@id/result" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintEnd_toEndOf="@id/button_1"
        app:layout_constraintStart_toStartOf="@id/button_1"
        app:layout_constraintTop_toBottomOf="@id/button_1" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_8"
        app:layout_constraintEnd_toEndOf="@id/button_2"
        app:layout_constraintStart_toStartOf="@id/button_2"
        app:layout_constraintTop_toBottomOf="@id/button_2" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_9"
        app:layout_constraintEnd_toEndOf="@id/button_3"
        app:layout_constraintStart_toStartOf="@id/button_3"
        app:layout_constraintTop_toBottomOf="@id/button_3" />

    <Button
        android:id="@+id/button_multiplication"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_multiplication"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_minus"
        app:layout_constraintEnd_toEndOf="@id/button_division"
        app:layout_constraintStart_toStartOf="@id/button_division"
        app:layout_constraintTop_toBottomOf="@id/button_division" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        android:textSize="@dimen/button_text"
        app:layout_constraintEnd_toEndOf="@id/button_4"
        app:layout_constraintStart_toStartOf="@id/button_4"
        app:layout_constraintTop_toBottomOf="@id/button_4" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        android:textSize="@dimen/button_text"
        app:layout_constraintEnd_toEndOf="@id/button_5"
        app:layout_constraintStart_toStartOf="@id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_point"
        app:layout_constraintEnd_toEndOf="@id/button_6"
        app:layout_constraintStart_toStartOf="@id/button_6"
        app:layout_constraintTop_toBottomOf="@id/button_6" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_minus"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/button_plus"
        app:layout_constraintEnd_toEndOf="@id/button_multiplication"
        app:layout_constraintStart_toStartOf="@id/button_multiplication"
        app:layout_constraintTop_toBottomOf="@id/button_multiplication" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:text="@string/_0"
        android:textSize="@dimen/button_text"
        app:layout_constraintEnd_toEndOf="@id/button_8"
        app:layout_constraintStart_toStartOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_point"
        android:textSize="@dimen/button_text"
        app:layout_constraintEnd_toEndOf="@id/button_9"
        app:layout_constraintStart_toStartOf="@id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_plus"
        android:textSize="@dimen/button_text"
        app:layout_constraintEnd_toEndOf="@id/button_minus"
        app:layout_constraintStart_toStartOf="@id/button_minus"
        app:layout_constraintTop_toBottomOf="@+id/button_minus" />

    <Button
        android:id="@+id/button_ac"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:text="@string/_ac"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/button_7"
        app:layout_constraintStart_toStartOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_0" />

    <Button
        android:id="@+id/button_del"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:text="@string/_del"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@id/button_8"
        app:layout_constraintStart_toStartOf="@id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_0" />


    <Button
        android:id="@+id/button_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_total"
        android:textSize="@dimen/button_text"
        app:layout_constraintEnd_toEndOf="@id/button_plus"
        app:layout_constraintStart_toStartOf="@id/button_point"
        app:layout_constraintTop_toBottomOf="@+id/button_point" />

</androidx.constraintlayout.widget.ConstraintLayout>